crates/jni/tests/ui/bind_java_type/fail/raw_fn_with_error_policy.stderr
error: Cannot specify 'error_policy' when using 'raw' - error_policy only applies to safe wrappers that use with_env
  --> tests/ui/bind_java_type/fail/raw_fn_with_error_policy.rs:19:12
   |
19 |         fn test_method {
   |            ^^^^^^^^^^^

error[E0412]: cannot find type `TestClass` in this scope
 --> tests/ui/bind_java_type/fail/raw_fn_with_error_policy.rs:9:12
  |
9 |     _this: TestClass<'local>,
  |            ^^^^^^^^^ not found in this scope
